2024-09-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Disable an optimization while bug #3783 is being looked into.
	* doc/sdccman.lyx,
	  src/port.h:
	  Remove references to obsolete RLC, RRC iCode.

2024-09-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCmain.c:
	  Fix an issue in command line parsing.

2024-09-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx,
	  src/SDCCmain.c:
	  Make the official standard names and nicknames the most prominent way to refer to standards in documentation.

2024-09-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCClospre.cc:
	  Improve handling of nested struct/union/array, part of RFE #937.

2024-09-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations.

2024-09-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c:
	  Assertions to help track down bug #3781.

2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def:
	  Peephole optimizer rule flag condition fix.

2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Fix and improve right shift optimization, RFE #935.

2024-09-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def,
	  support/regression/tests/shifts3.c.in:
	  Right shift optimization inspired by RFE #935.

2024-09-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/support/scripts/sdcc.nsi:
	  Include f8 port in Windows installer.
	* src/SDCClabel.c,
	  src/SDCCopt.c:
	  Improve handling of string literals in dead-code elimination, RFE #567.

2024-09-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3779.c:
	  Fix bug #3779.

2024-09-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c,
	  src/pic14/main.c,